Fix links and button hover and info card wrap

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body {
 .links {
     display: flex;
     margin-left: auto;
-    gap: 32px;
     flex-wrap: wrap;
     max-width: 50%;
 }
@@ -47,6 +46,14 @@ body {
 .links a {
     color: #F9FAF8;
     text-decoration: none;
+    padding: 10px 20px;
+}
+
+.links a:hover {
+    align-self: center;
+    color: white;
+    background-color: #1F2937;
+    border-radius: 10px;
 }
 
 .hero-container {
@@ -92,6 +99,11 @@ body {
     margin-top: 10px;
 }
 
+.awesome-button:hover {
+    background-color: orangered;
+    color: #0d1724;
+}
+
 .placeholder {
     display: flex;
 }
@@ -125,6 +137,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .card-wrap {
@@ -216,6 +229,10 @@ body {
     color: white;
     padding: 10px 20px;
     border: 2px solid #F9FAF8;
+}
+
+.action-button:hover{
+    background-color: #0d1724;
 }
 
 .footer {
